Feature: Create database, phase 1a
versions_v2_03091553

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "versions_v2_03091448"
+    "version_v2_03091553"
    ]
   },
   {
@@ -54,7 +54,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions"
+    "## Joining\n",
+    "Merging the stations data with the POIs data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions"
    ]
   },
   {
@@ -68,13 +76,6 @@
     "# Function to rename columns in a DataFrame\n",
     "def rename_columns(df, rename_dict):\n",
     "    df.rename(columns=rename_dict, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Joining"
    ]
   },
   {
@@ -2109,19 +2110,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Put all your results in an SQLite3 database (remember, SQLite stores its databases as files in your local machine - make sure to create your database in your project's data/ directory!)"
+    "We will put all data into an SQLite3 database."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating functions and connection info"
+    "## Creating functions and connection info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2165,21 +2166,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inerts function\n",
+    "def execute_inserts(table, query, cursor):\n",
+    "\n",
+    "    # Convert DataFrame rows to list of dictionaries\n",
+    "    my_list = table.to_dict(orient='records')\n",
+    "\n",
+    "    # Iterate through the list of dictionaries and insert data\n",
+    "    for row in my_list:\n",
+    "        try:\n",
+    "            execute_query(query, cursor, row, print_message=False)\n",
+    "\n",
+    "        except sqlite3.Error as e:\n",
+    "            print(\"An error occurred:\", e)\n",
+    "            \n",
+    "    print(\"Queries executed successfully\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Phase 1a: Create tables<br>\n",
+    "## Phase 1a: Create tables<br>\n",
     "- **stations**: to hold information related to the stations location in the city along with their total bikes\n",
-    "- **pois**: to hold the information about each POI (including rating, popularity, price)\n",
-    "- **categories**: simulates the api category for Foursquare\n",
+    "- **pois**: to hold the information about each POI (including poi_name, poi_id, review_count, rating, popularity, price)\n",
+    "- **categories**: simulates the api category of Foursquare\n",
     "- **poi_category**: joining table for poi and categories (many-to-many)\n",
     "- **prices**: to holds the definition of the prices number\n",
-    "- **poi_detail**: creates the relation between data (station, poi_id, distance to the station)"
+    "- **poi_detail**: creates the relation between data (station, poi_id, distance to the station)\n",
+    "- **api**: if we have time, we could try combining the poi_id of both API. This table collect api_number, poi_id and api_name."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2209,11 +2234,10 @@
     "\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS pois (\n",
     "  poi_id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-    "  api_number VARCHAR NOT NULL,\n",
-    "  api_name VARCHAR NOT NULL,\n",
     "  poi_name VARCHAR NOT NULL,\n",
     "  p_lat FLOAT NOT NULL,\n",
     "  p_lon FLOAT NOT NULL,\n",
+    "  review_count INTEGER,\n",
     "  rating INTEGER,\n",
     "  popularity FLOAT,\n",
     "  price INTEGER,\n",
@@ -2238,15 +2262,31 @@
     "  FOREIGN KEY (station_id) REFERENCES stations(station_id),\n",
     "  FOREIGN KEY (poi_id) REFERENCES pois(poi_id)\n",
     ");\n",
+    "\"\"\",\n",
+    "\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS api (\n",
+    "  api_number VARCHAR PRIMARY KEY,\n",
+    "  api_name VARCHAR NOT NULL,\n",
+    "  poi_id INTEGER NOT NULL,\n",
+    "  FOREIGN KEY (poi_id) REFERENCES pois(poi_id)\n",
+    ");\n",
     "\"\"\"\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection to SQLite DB successful\n"
+     ]
+    }
+   ],
    "source": [
     "# Create connection and cursor\n",
     "conn = create_connection('../data/mtl_bike_rentals.sqlite')\n",
@@ -2256,9 +2296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Queries executed successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# Call the function to create the tables\n",
     "execute_query(create_table_queries, cursor)"
@@ -2268,7 +2316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Phase 1b: Inserts data in tables"
+    "## Phase 1b: Inserts data in tables"
    ]
   },
   {
@@ -2277,28 +2325,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a function to execute inserts\n",
-    "def execute_inserts(table, query, cursor):\n",
+    "# Load sources\n",
     "\n",
-    "    # Convert DataFrame rows to list of dictionaries\n",
-    "    my_list = table.to_dict(orient='records')\n",
-    "\n",
-    "    # Iterate through the list of dictionaries and insert data\n",
-    "    for row in my_list:\n",
-    "        try:\n",
-    "            execute_query(query, cursor, row, print_message=False)\n",
-    "\n",
-    "        except sqlite3.Error as e:\n",
-    "            print(\"An error occurred:\", e)\n",
-    "            \n",
-    "    print(\"Queries executed successfully\")"
+    "yelp_pois = pd.read_csv('../data/yelp_pois.csv', index_col=None)\n",
+    "fsq_pois = pd.read_csv('../data/fsq_pois.csv', index_col=None)\n",
+    "stations = pd.read_csv('../data/stations.csv', index_col=None)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Stations table"
+    "### Stations table"
    ]
   },
   {
@@ -2325,7 +2363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Categories table"
+    "### Categories table"
    ]
   },
   {
@@ -2369,7 +2407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Price table"
+    "### Price table"
    ]
   },
   {
@@ -2414,7 +2452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### POIs table"
+    "### POIs table"
    ]
   },
   {
@@ -2476,7 +2514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### POI_category table"
+    "### POI_category table"
    ]
   },
   {
@@ -2518,7 +2556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### POI_detail"
+    "### POI_detail"
    ]
   },
   {
@@ -2572,7 +2610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Phase 2: Read data"
+    "## Phase 2: Read data"
    ]
   },
   {
