Update: joining_final

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "version_v2_03092031"
+    "version_v2_03092135"
    ]
   },
   {
@@ -4215,40 +4215,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     station_id                                   station_name      s_lat  \\\n",
-      "0             0          de la Commune / Place Jacques-Cartier  45.507610   \n",
-      "1             1                           de la Commune / King  45.497504   \n",
-      "2             2                   Jeanne-Mance / René-Lévesque  45.506371   \n",
-      "3             3        Métro Viau (Viau / Pierre-de-Coubertin)  45.563084   \n",
-      "4             4          Métro Peel (de Maisonneuve / Stanley)  45.500380   \n",
-      "..          ...                                            ...        ...   \n",
-      "792         792                            Waverly / Van Horne  45.527363   \n",
-      "793         793  Gare d'autocars de Montréal (Berri / Ontario)  45.516926   \n",
-      "794         794                          de Chambly / de Rouen  45.547103   \n",
-      "795         795                       de Hampton / de Monkland  45.471179   \n",
-      "796         796                             Monsabré / Boileau  45.571796   \n",
-      "\n",
-      "         s_lon  total_bikes  \n",
-      "0   -73.551836           78  \n",
-      "1   -73.552845           62  \n",
-      "2   -73.564201           55  \n",
-      "3   -73.548194           50  \n",
-      "4   -73.575070           48  \n",
-      "..         ...          ...  \n",
-      "792 -73.607723           10  \n",
-      "793 -73.564257           10  \n",
-      "794 -73.548924            9  \n",
-      "795 -73.627002            9  \n",
-      "796 -73.541520            5  \n",
-      "\n",
-      "[797 rows x 5 columns]\n"
+      "   COUNT(*)\n",
+      "0      7479\n"
      ]
     }
    ],
@@ -4257,9 +4232,9 @@
     "df_check = pd.read_sql(\n",
     "    \"\"\"\n",
     "    SELECT\n",
-    "        *\n",
+    "        COUNT(*)\n",
     "    FROM\n",
-    "        stations\n",
+    "        pois\n",
     "    \"\"\", conn\n",
     ")\n",
     "\n",
@@ -4268,7 +4243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -4282,26 +4257,26 @@
       "3          Métro Viau (Viau / Pierre-de-Coubertin)        3         50.0   \n",
       "4            Métro Peel (de Maisonneuve / Stanley)        4         48.0   \n",
       "..                                             ...      ...          ...   \n",
-      "792                            Waverly / Van Horne      792         10.0   \n",
-      "793  Gare d'autocars de Montréal (Berri / Ontario)      793         10.0   \n",
-      "794                          de Chambly / de Rouen      794          9.0   \n",
-      "795                       de Hampton / de Monkland      795          9.0   \n",
-      "796                             Monsabré / Boileau      796          5.0   \n",
+      "790                            Waverly / Van Horne      792         10.0   \n",
+      "791  Gare d'autocars de Montréal (Berri / Ontario)      793         10.0   \n",
+      "792                          de Chambly / de Rouen      794          9.0   \n",
+      "793                       de Hampton / de Monkland      795          9.0   \n",
+      "794                             Monsabré / Boileau      796          5.0   \n",
       "\n",
       "     avg_distance_to_station_m  avg_review  avg_rating  avg_price  \n",
-      "0                   431.701493  258.302326    8.368284   2.014925  \n",
-      "1                   570.388889  382.611111    8.428373   2.079365  \n",
-      "2                   586.882812  291.756757    8.464062   1.851562  \n",
-      "3                   579.129870   31.150000    7.723113   1.285714  \n",
-      "4                   363.119403  282.625000    8.108209   1.880597  \n",
+      "0                   287.150000  264.000000    8.143750   2.600000  \n",
+      "1                   491.900000  335.100000    8.481250   2.850000  \n",
+      "2                   451.950000  272.400000    8.368750   2.500000  \n",
+      "3                   669.000000   33.066667    7.300000   2.000000  \n",
+      "4                   222.850000  266.300000    8.031250   2.250000  \n",
       "..                         ...         ...         ...        ...  \n",
-      "792                 624.686567  140.451613    8.249776   1.761194  \n",
-      "793                 563.560000  212.633333    8.114400   1.888000  \n",
-      "794                 598.231481   36.933333    7.758332   1.546296  \n",
-      "795                 560.780952   51.406250    7.759092   1.438095  \n",
-      "796                 698.523810    8.607143    7.391901   1.523810  \n",
+      "790                 534.705882  155.705882    8.411765   2.294118  \n",
+      "791                 404.157895  240.157895    8.342105   2.368421  \n",
+      "792                 593.350000   39.400000    8.200000   1.950000  \n",
+      "793                 407.450000   45.650000    8.087500   1.850000  \n",
+      "794                 686.222222    7.944444    6.812500   2.000000  \n",
       "\n",
-      "[797 rows x 7 columns]\n"
+      "[795 rows x 7 columns]\n"
      ]
     }
    ],
@@ -4322,9 +4297,12 @@
     "        stations s\n",
     "    JOIN poi_detail pd USING(station_id)\n",
     "    JOIN pois p USING(poi_id)\n",
-    "    JOIN poi_category USING(poi_id)\n",
-    "    JOIN categories c USING(category_id)\n",
+    "    JOIN api a USING(poi_id)\n",
+    "    WHERE\n",
+    "        api_name = 'Yelp'\n",
     "    GROUP BY 1, 2\n",
+    "    HAVING\n",
+    "        avg_review NOT NULL\n",
     "    ORDER BY 2\n",
     "    \"\"\", conn\n",
     ")\n",
@@ -4334,7 +4312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -4369,75 +4347,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>797.000000</td>\n",
-       "      <td>797.000000</td>\n",
-       "      <td>797.000000</td>\n",
        "      <td>795.000000</td>\n",
-       "      <td>797.000000</td>\n",
-       "      <td>797.000000</td>\n",
+       "      <td>795.000000</td>\n",
+       "      <td>795.000000</td>\n",
+       "      <td>795.000000</td>\n",
+       "      <td>795.000000</td>\n",
+       "      <td>795.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>398.000000</td>\n",
-       "      <td>20.877039</td>\n",
-       "      <td>605.300954</td>\n",
-       "      <td>109.460373</td>\n",
-       "      <td>7.949701</td>\n",
-       "      <td>1.568835</td>\n",
+       "      <td>397.831447</td>\n",
+       "      <td>20.883019</td>\n",
+       "      <td>535.434623</td>\n",
+       "      <td>116.382415</td>\n",
+       "      <td>7.987923</td>\n",
+       "      <td>2.087716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>230.218375</td>\n",
-       "      <td>6.941242</td>\n",
-       "      <td>108.337736</td>\n",
-       "      <td>125.992256</td>\n",
-       "      <td>0.359642</td>\n",
-       "      <td>0.194149</td>\n",
+       "      <td>230.464528</td>\n",
+       "      <td>6.948907</td>\n",
+       "      <td>162.161629</td>\n",
+       "      <td>136.850854</td>\n",
+       "      <td>0.719276</td>\n",
+       "      <td>0.236527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>5.000000</td>\n",
-       "      <td>231.073394</td>\n",
+       "      <td>104.500000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>6.246559</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>3.250000</td>\n",
+       "      <td>1.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>199.000000</td>\n",
+       "      <td>198.500000</td>\n",
        "      <td>16.000000</td>\n",
-       "      <td>537.655556</td>\n",
-       "      <td>12.355172</td>\n",
-       "      <td>7.746985</td>\n",
-       "      <td>1.424242</td>\n",
+       "      <td>411.402477</td>\n",
+       "      <td>12.226923</td>\n",
+       "      <td>7.778125</td>\n",
+       "      <td>1.923077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>398.000000</td>\n",
+       "      <td>397.000000</td>\n",
        "      <td>19.000000</td>\n",
-       "      <td>611.956897</td>\n",
-       "      <td>47.280000</td>\n",
-       "      <td>7.992926</td>\n",
-       "      <td>1.550459</td>\n",
+       "      <td>534.058824</td>\n",
+       "      <td>47.058824</td>\n",
+       "      <td>8.213235</td>\n",
+       "      <td>2.052632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>597.000000</td>\n",
+       "      <td>597.500000</td>\n",
        "      <td>23.000000</td>\n",
-       "      <td>678.710744</td>\n",
-       "      <td>183.734023</td>\n",
-       "      <td>8.207422</td>\n",
-       "      <td>1.712000</td>\n",
+       "      <td>658.069378</td>\n",
+       "      <td>196.722222</td>\n",
+       "      <td>8.425000</td>\n",
+       "      <td>2.233032</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>796.000000</td>\n",
        "      <td>78.000000</td>\n",
-       "      <td>911.351351</td>\n",
-       "      <td>556.812500</td>\n",
-       "      <td>8.642167</td>\n",
-       "      <td>2.153226</td>\n",
+       "      <td>984.666667</td>\n",
+       "      <td>620.631579</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>2.916667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4445,27 +4423,27 @@
       ],
       "text/plain": [
        "          station  total_bikes  avg_distance_to_station_m  avg_review  \\\n",
-       "count  797.000000   797.000000                 797.000000  795.000000   \n",
-       "mean   398.000000    20.877039                 605.300954  109.460373   \n",
-       "std    230.218375     6.941242                 108.337736  125.992256   \n",
-       "min      0.000000     5.000000                 231.073394    1.000000   \n",
-       "25%    199.000000    16.000000                 537.655556   12.355172   \n",
-       "50%    398.000000    19.000000                 611.956897   47.280000   \n",
-       "75%    597.000000    23.000000                 678.710744  183.734023   \n",
-       "max    796.000000    78.000000                 911.351351  556.812500   \n",
+       "count  795.000000   795.000000                 795.000000  795.000000   \n",
+       "mean   397.831447    20.883019                 535.434623  116.382415   \n",
+       "std    230.464528     6.948907                 162.161629  136.850854   \n",
+       "min      0.000000     5.000000                 104.500000    1.000000   \n",
+       "25%    198.500000    16.000000                 411.402477   12.226923   \n",
+       "50%    397.000000    19.000000                 534.058824   47.058824   \n",
+       "75%    597.500000    23.000000                 658.069378  196.722222   \n",
+       "max    796.000000    78.000000                 984.666667  620.631579   \n",
        "\n",
        "       avg_rating   avg_price  \n",
-       "count  797.000000  797.000000  \n",
-       "mean     7.949701    1.568835  \n",
-       "std      0.359642    0.194149  \n",
-       "min      6.246559    1.000000  \n",
-       "25%      7.746985    1.424242  \n",
-       "50%      7.992926    1.550459  \n",
-       "75%      8.207422    1.712000  \n",
-       "max      8.642167    2.153226  "
+       "count  795.000000  795.000000  \n",
+       "mean     7.987923    2.087716  \n",
+       "std      0.719276    0.236527  \n",
+       "min      3.250000    1.500000  \n",
+       "25%      7.778125    1.923077  \n",
+       "50%      8.213235    2.052632  \n",
+       "75%      8.425000    2.233032  \n",
+       "max     10.000000    2.916667  "
       ]
      },
-     "execution_count": 218,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4476,7 +4454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -4500,10 +4478,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>total_bikes</th>\n",
        "      <th>station</th>\n",
+       "      <th>total_bikes</th>\n",
        "      <th>distance</th>\n",
        "      <th>review_count</th>\n",
        "      <th>rating</th>\n",
@@ -4519,15 +4495,11 @@
        "      <td>795.000000</td>\n",
        "      <td>795.000000</td>\n",
        "      <td>795.000000</td>\n",
-       "      <td>795.000000</td>\n",
-       "      <td>795.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>45.523838</td>\n",
-       "      <td>-73.593054</td>\n",
-       "      <td>20.883019</td>\n",
        "      <td>397.831447</td>\n",
+       "      <td>20.883019</td>\n",
        "      <td>534.758009</td>\n",
        "      <td>109.460373</td>\n",
        "      <td>7.979787</td>\n",
@@ -4535,10 +4507,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.040303</td>\n",
-       "      <td>0.048295</td>\n",
-       "      <td>6.948907</td>\n",
        "      <td>230.464528</td>\n",
+       "      <td>6.948907</td>\n",
        "      <td>166.298803</td>\n",
        "      <td>125.992256</td>\n",
        "      <td>0.736728</td>\n",
@@ -4546,10 +4516,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>45.416295</td>\n",
-       "      <td>-73.758227</td>\n",
-       "      <td>5.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>5.000000</td>\n",
        "      <td>120.250000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.500000</td>\n",
@@ -4557,10 +4525,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>45.501627</td>\n",
-       "      <td>-73.616065</td>\n",
-       "      <td>16.000000</td>\n",
        "      <td>198.500000</td>\n",
+       "      <td>16.000000</td>\n",
        "      <td>409.621212</td>\n",
        "      <td>12.355172</td>\n",
        "      <td>7.751584</td>\n",
@@ -4568,10 +4534,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>45.525014</td>\n",
-       "      <td>-73.582596</td>\n",
-       "      <td>19.000000</td>\n",
        "      <td>397.000000</td>\n",
+       "      <td>19.000000</td>\n",
        "      <td>533.774194</td>\n",
        "      <td>47.280000</td>\n",
        "      <td>8.184615</td>\n",
@@ -4579,10 +4543,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>45.545403</td>\n",
-       "      <td>-73.565379</td>\n",
-       "      <td>23.000000</td>\n",
        "      <td>597.500000</td>\n",
+       "      <td>23.000000</td>\n",
        "      <td>659.390937</td>\n",
        "      <td>183.734023</td>\n",
        "      <td>8.414706</td>\n",
@@ -4590,10 +4552,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>45.702349</td>\n",
-       "      <td>-73.436058</td>\n",
-       "      <td>78.000000</td>\n",
        "      <td>796.000000</td>\n",
+       "      <td>78.000000</td>\n",
        "      <td>984.600000</td>\n",
        "      <td>556.812500</td>\n",
        "      <td>10.000000</td>\n",
@@ -4604,54 +4564,42 @@
        "</div>"
       ],
       "text/plain": [
-       "         latitude   longitude  total_bikes     station    distance  \\\n",
-       "count  795.000000  795.000000   795.000000  795.000000  795.000000   \n",
-       "mean    45.523838  -73.593054    20.883019  397.831447  534.758009   \n",
-       "std      0.040303    0.048295     6.948907  230.464528  166.298803   \n",
-       "min     45.416295  -73.758227     5.000000    0.000000  120.250000   \n",
-       "25%     45.501627  -73.616065    16.000000  198.500000  409.621212   \n",
-       "50%     45.525014  -73.582596    19.000000  397.000000  533.774194   \n",
-       "75%     45.545403  -73.565379    23.000000  597.500000  659.390937   \n",
-       "max     45.702349  -73.436058    78.000000  796.000000  984.600000   \n",
+       "          station  total_bikes    distance  review_count      rating  \\\n",
+       "count  795.000000   795.000000  795.000000    795.000000  795.000000   \n",
+       "mean   397.831447    20.883019  534.758009    109.460373    7.979787   \n",
+       "std    230.464528     6.948907  166.298803    125.992256    0.736728   \n",
+       "min      0.000000     5.000000  120.250000      1.000000    2.500000   \n",
+       "25%    198.500000    16.000000  409.621212     12.355172    7.751584   \n",
+       "50%    397.000000    19.000000  533.774194     47.280000    8.184615   \n",
+       "75%    597.500000    23.000000  659.390937    183.734023    8.414706   \n",
+       "max    796.000000    78.000000  984.600000    556.812500   10.000000   \n",
        "\n",
-       "       review_count      rating       price  \n",
-       "count    795.000000  795.000000  795.000000  \n",
-       "mean     109.460373    7.979787    2.058163  \n",
-       "std      125.992256    0.736728    0.234816  \n",
-       "min        1.000000    2.500000    1.250000  \n",
-       "25%       12.355172    7.751584    1.892857  \n",
-       "50%       47.280000    8.184615    2.027027  \n",
-       "75%      183.734023    8.414706    2.186343  \n",
-       "max      556.812500   10.000000    2.962963  "
+       "            price  \n",
+       "count  795.000000  \n",
+       "mean     2.058163  \n",
+       "std      0.234816  \n",
+       "min      1.250000  \n",
+       "25%      1.892857  \n",
+       "50%      2.027027  \n",
+       "75%      2.186343  \n",
+       "max      2.962963  "
       ]
      },
-     "execution_count": 214,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_yelp.describe()"
+    "# Compared to\n",
+    "merged_yelp[['station', 'total_bikes', 'distance', 'review_count', 'rating', 'price']].describe()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 216,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "797"
-      ]
-     },
-     "execution_count": 216,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "stations.shape[0]"
+    "There is a slight difference between the Database and the Dataframe we saved. This is due to the fact that I forgot to filter the duplicates of the categories before merging with stations. Since I seperated the category in my database (and didn't pull form it in my query), I already have the right data. Thanks relational database!!!"
    ]
   },
   {
