--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -2660,7 +2660,7 @@
    "metadata": {},
    "source": [
     "#### OVERVIEW\n",
-    "- As expected, price has the strongest correlation with almost all the other varibales.\n",
+    "- As expected, price has the strongest correlation with almost all the other variables.\n",
     "- Rating as the least correlation with the dependant variable.\n",
     "- We should use rating for both model and seperate review count into two distinct categories."
    ]
