Feature: READ me

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -30,30 +30,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of content:\n",
-    "\n",
-    "- ## [Functions](#Functions)\n",
-    "- ## [Joining](#Joining):\n",
-    "    - [Strategy](#Strategy)\n",
-    "    - [Feature engineering](#feature-engineering):\n",
-    "        - [Create meaningful columns](#create-meaningful-columns)\n",
-    "        - [Cleaning dataframe](#cleaning-dataframe)\n",
-    "        - [Missing values](#missing-values)\n",
-    "\n",
-    "- ## [Database](#Database):\n",
-    "\n",
-    "Acronyms and Definition:\n",
-    "\n",
-    "+ fsq = FourSquare (API)\n",
-    "+ yelp = Yelp (API)\n",
-    "+ poi(s) = Point Of Interest(s)\n",
-    "+ stations = Bike rental station (Bixi - Montréal, Qc, Canada)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Joining\n",
     "Merging the stations data with the POIs data"
    ]
@@ -1132,7 +1108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Clean data"
+    "#### Cleaning data"
    ]
   },
   {
